src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__timestamp__cast_timestamp_to_string.snap
---
source: src/expr/src/scalar/func/impls/timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"timestamp_to_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToTimestamp(None))\n)]\nfn cast_timestamp_to_string(a: CheckedTimestamp<NaiveDateTime>) -> String {\n    let mut buf = String::new();\n    strconv::format_timestamp(&mut buf, &a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastTimestampToString;
impl crate::func::EagerUnaryFunc for CastTimestampToString {
    type Input<'a> = CheckedTimestamp<NaiveDateTime>;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_timestamp_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToTimestamp(None))
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastTimestampToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timestamp_to_text")
    }
}
fn cast_timestamp_to_string(a: CheckedTimestamp<NaiveDateTime>) -> String {
    let mut buf = String::new();
    strconv::format_timestamp(&mut buf, &a);
    buf
}
