src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__timestamp__cast_timestamp_to_time.snap
---
source: src/expr/src/scalar/func/impls/timestamp.rs
expression: "#[sqlfunc(sqlname = \"timestamp_to_time\", preserves_uniqueness = false)]\nfn cast_timestamp_to_time(a: CheckedTimestamp<NaiveDateTime>) -> NaiveTime {\n    a.time()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastTimestampToTime;
impl crate::func::EagerUnaryFunc for CastTimestampToTime {
    type Input<'a> = CheckedTimestamp<NaiveDateTime>;
    type Output<'a> = NaiveTime;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_timestamp_to_time(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastTimestampToTime {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timestamp_to_time")
    }
}
fn cast_timestamp_to_time(a: CheckedTimestamp<NaiveDateTime>) -> NaiveTime {
    a.time()
}
